# solverpy

./: .gitignore  404.html  AGENTS.md  BUILD.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  COMMITS.md  ChangeLog.md  DONE.md  FIXME.md  ISSUES.md  README.md  TASK1.md  TASK2.md  TASKS.md  TODO.md  change-log.sh  conftest.py  index.html  mkdocs-api.py  mkdocs-api.sh  mkdocs-build.sh  mkdocs-serve.sh  mkdocs.yml  mkdocs.yml.tpl  objects.inv  pyproject.toml  requirements.txt  run-pytest.sh  sitemap.xml  talkers.md  version-tags.py
api/solverpy/: index.html
css/: color.css  color1.css  color2.css  color3.css  color4.css  heading.css  heading1.css  heading2.css  solverpy.css
dia/: ahoj.puml  benchmark-multiprocessing.puml  benchmark-overview.puml  builder-autotune.puml  code-legend.puml  overview.puml  solver-plugins.puml  solver-pluginsolver.puml  solver-solver.puml  solverpy-benchmark.puml  solverpy-ml.puml  task-talker.puml
diagrams/src/: solverpy-ml.puml
docs/: index.md  markdown.md  options.md  plugins.dot  reference.md  test.md  tutorial.md
docs/css/: solverpy.css
docs/dia/: ahoj.puml  solverpy-solvers.puml
docs/js/: solverpy.js
dust/: change-log.sh  make-api-docs.py  make-api-docs2.py  make-docs.py  makedoc2.py  mkdocs_nav.yml
js/: solverpy.js
markdown/: index.html
options/: index.html
reference/: index.html
scripts/: solverpy-autotune  solverpy-compress  solverpy-decompress  solverpy-deconflict  solverpy-esid2strat.py  solverpy-filter
search/: search_index.json
test/: index.html
tests/: conftest.py  test_benchmark_eval.py  test_eprovesid.py  test_human.py  test_learn_loop.py  test_limits.py  test_llm2smt.py  test_patterns.py  test_proofs.py  test_resources.py  test_sids.py  test_solver_interface.py  test_solver_run.py  test_status.py  test_talker_runtime.py
tutorial/: index.html
(+411 files in other folders)
