[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "solverpy"
version = "0.1.0"
description = "Python inteface for Automated Reasoning (AR) solvers, provers, and checkers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "PyYAML",
  "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/cbboyan/solverpy"
"Bug Tracker" = "https://github.com/cbboyan/solverpy/issues"

